Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Object var)
        integer v = cast(integer, var)
        if v = 5
            output "passed"
        end
    end
end
