Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanInteger.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        integer var = 5
        return var
    end
end